# hexapot_pkg

./: CMakeLists.txt  README.md  package.xml  prompt_launcher.txt  prompt_manager_swarm.txt
articubot_three/communication/: README.md  command_talker_node.py  heading_estimator_node.py  hw_config.py  sensors_fast_listener_node.py  sensors_reliable_listener_node.py
articubot_three/utils/: cmd_vel_relay_node.py
config/: gz_bridge.yaml  my_hexapod_controllers.yaml
csv/: pose_estimator_log.csv
description/: gps.xacro  imu copy.xacro  magnetometer copy.xacro  magnetometer.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  ultrasonic.xacro
description_hexapod/: base_uttu.gazebo.xacro  base_uttu.urdf.xacro  camera_hexapod.xacro  gps_hexapod.xacro  hexapod_robot.xacro  hexapod_robot_gazebo.xacro  holder_pi_hexapod.xacro  imu_hexapod.xacro  ir_left_distance_sensor_hexapod.xacro  ir_right_distance_sensor_hexapod.xacro  legs_uttu.gazebo.xacro  legs_uttu.urdf.xacro  magnetometer_hexapod.xacro  ros2_hexapod_control.xacro  ultrasonic_hexapod.xacro
hexapod_pkg/: compute_estimate_xy.py  compute_gps_to_local_xy.py  compute_heading.py  compute_heading_kalman.py  compute_stimate_xy.py  compute_ultrasonic_ranges.py  dds_cmd_talker.py  dds_monitor_pc.py  dds_sensors_fast_listener.py  dds_sensors_reliable_listener.py  green_cube_viewer2.py  gz_hexapod_inv_kinematics.py  gz_hexapod_low_level_control.py  gz_ir_emulator.py  hw_config.py  manager_goal_free_navigation.py  master_monitor.py  sensor_ultrasonic.py  simple_high_level_nav_with_crab.py  teleop_hexapod.py  teleop_hexapod_real.py  teleop_hexapod_sim.py  web_camera_node.py  yolo_obstacle_node_best.py
hexapod_pkg/camera_nodes/: web_camera_node.py
hexapod_pkg/collision_detector_nodes/: ultrasonic_range.py
hexapod_pkg/dds_nodes/: dds_cmd_talker.py  dds_monitor_pc.py  dds_sensors_fast_listener.py
hexapod_pkg/gazebo_nodes/: gz_hexapod_low_level_control.py  gz_ir_emulator.py
hexapod_pkg/image_recognition_nodes/: ball_viewer_yolo.py  cube_viewer_classic_vision.py  cube_viewer_yolo.py  obstacle_viewer.py  yolo_obstacle_node_best.py
hexapod_pkg/localization_and_orientation_nodes/: compute_estimate_xy.py  compute_gps_to_local_xy.py
hexapod_pkg/managers/: swarm_node_manager.py
hexapod_pkg/monitor_nodes/: master_monitor.py
hexapod_pkg/navigation_nodes/: follower_navigation_node.py  simple_high_level_nav.py  swarm_navigation_with_obstacle_avoidance.py  target_navigation_with_obstacle_avoidance.py
hexapod_pkg/social_robot_nodes/: hand_gesture_node.py  social_pose_node.py
hexapod_pkg/teleop_nodes/: teleop_hexapod.py  teleop_hexapod_real.py  teleop_hexapod_real_cont.py
hexapod_pkg/utils/: twist_to_cmd_robot.py
hexapot_pkg/communication/: monitor_node_pc.py
hexapot_pkg/image_recognition_nodes/: yolo_obstacle_node.py
hexapot_pkg/localization_nodes/: compute_heading.py  corrected_stimate_xy.py  gps_to_local_xy.py  noise_compute_heading.py  noise_gps_to_local_xy.py
hexapot_pkg/master_nodes/: control_master_hexapod.py  master_monitor.py
hexapot_pkg/navigation_nodes/: global_nav_planner.py  high_level_A_planner.py  local_nav_planner.py  local_nav_planner2.py
hexapot_pkg/simulation_utils/: ir_gazebo_ros_emulator.py
hexapot_pkg/social_robot_nodes/: hand_gesture_node.py
hexapot_pkg/utils/: balecito.py  test2.py
launch/: base_compute_real.launch.py  base_compute_sim.launch .py  base_compute_sim.launch.py  base_dds.launch.py  base_gazebo.launch.py  base_gazebo_sim.launch.py  dds_base.launch.py  gazebo_base.launch.py  gazebo_sim.launch.py  joystick.launch.py  launch_compute_nodes_sim.launch.py  launch_sim1.launch.py  launch_sim2.launch.py  localization_launch.py  main1_manual_control_real.launch.py  main1_manual_control_sim.launch.py  main2_goal_free_navigation_real.launch.py  main2_goal_free_navigation_sim.launch.py  manager_test.py  navigation_launch.py  online_async_launch.py  real_communication_sim.launch.py  real_communication_test.launch.py  rsp.launch.py  social_robot.launch.py
launch/reference/: ball_tracker.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_sim2.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py
launch_real/: base_compute_real.launch.py  base_dds.launch.py  main1_goal_free_navigation_real.launch.py  main1_manual_control_sim.launch.py  main4_follow_target_sim.launch.py
launch_sim/: base_compute_sim.launch.py  base_gazebo_ball.launch.py  base_gazebo_cube.launch copy.py  navigation_to_target_sim.launch.py  rsp.launch.py
log/: latest_build
logs/: goal_nav_log.csv  gps_local_xy.csv  heading_log.csv  pose_estimator_log.csv
meshes/: holder_pi_uttu.STL
utils/: twist_to_cmd_robot.py
worlds/: goal_nav_world.world  green_space.world  new_world.world  obstacles2.world  obstacles3.world  smalltown.world  swarm_space.world  test1.world
worlds/scripts/: asfalto.material
